cutoff fixed

--- a/apifrontend/src/App.css
+++ b/apifrontend/src/App.css
@@ -1,11 +1,3 @@
-.slider{
-  position: relative;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 img{
   max-height: 500px;
 }
@@ -17,35 +9,9 @@ p{
   max-width: 600px;
 }
 
-.name{
-  font-weight: bold;
-}
-
-.right-arrow{
-  position: absolute;
-  top: 50%;
-  right: 32px;
-  font-size: 3em;
-  color: #000;
-  z-index: 10;
-  cursor: pointer;
-  user-select: none;
-}
-
-.left-arrow{
-  position: absolute;
-  top: 50%;
-  left: 32px;
-  font-size: 3em;
-  color: #000;
-  z-index: 10;
-  cursor: pointer;
-  user-select: none;
-}
-
 .wrapper{
   display: flex;
-  height: 100vh;
+  height: 50h;
   width: 100vw;
   justify-content: center;
   align-items: center;
